21 February 2019 -- bug fix when writing 4,294,967,296 or more points uncompressed to LAS
28 December 2018 -- fix for LASzip v4 decompression of WavePacket part of PRDF 9 and 10
27 December 2018 -- upped to 3.2 r9 for bug fix in multi-channel NIR decompression
7 November 2018 -- laszip DLL: upped to 3.2 r8 for identical legacy and extended flags check
20 October 2018 -- fixed rare bug in LASinterval::merge_intervals()
5 October 2018 -- laszip DLL: upped to 3.2 r6 for corrected 'is_empty' return value in laszip_inside_rectangle()
28 September 2018 -- laszip DLL: tiny bug fix for writing extended classifications via DLL and updated examples
17 September 2018 -- laszip DLL: no more support for deprecated LASattributes (aka "extra bytes") with dimensions 2 or 3 
30 July 2018 -- bug fix in selective decompression of "extra_bytes" for point types 6 and higher
29 March 2018 -- add LASlib only fields to some structs to avoid future mix-up for "native" LAS 1.4
9 February 2018 -- minor version increment to 3.2 as POINT14_v4 fixes context inefficiency bug
28 December 2017 -- prepare to correct 'context switch' bug reported by Wanwannodao on some future date
15 September 2017 -- new C++ istream / ostream interface completed and released
22 August 2017 -- new C++ istream / ostream interface 
18 July 2017 -- bug fix for spatially-indexed reading from native compressed LAS 1.4 files
28 May 2017 -- support for "selective decompression" of compressed LAS 1.4 points added into DLL API
25 April 2017 -- enable "native LAS 1.4 extension" in LASzip DLL via 'request_native_extension'
30 March 2017 -- alpha-release of "native LAS 1.4 extension" for LASzip compression
11 January 2017 --  new DLL/API function 'laszip_set_chunk_size()' to change chunk size
8 January 2017 -- changed file names from "laszip_dll.h" to "laszip_api.h" for hobu
7 January 2017 -- set reserved field in LASzip VLR from 0xAABB to 0x0